# thot

./: .clang-format  .editorconfig  .gitignore  AUTHORS  CMakeLists.txt  CMakeSettings.json  MANIFEST.in  README.md  appveyor.yml  configure.ac  libomp.rb  pyproject.toml  setup.py
src/: CMakeLists.txt  Makefile.am  thot.cc  thot.h
src/downhill_simplex/: CMakeLists.txt  step_by_step_dhs.c  step_by_step_dhs.h
src/error_correction/: BaseEcModelForNbUcat.h  BaseEcmForWg.h  BaseEditDist.h  BaseErrorCorrectingModel.h  BaseErrorCorrectionModel.cc  BaseErrorCorrectionModel.h  BaseWgProcessorForAnlp.h  CMakeLists.txt  EditDistForStr.cc  EditDistForStr.h  EditDistForVec.h  EditDistForVecString.cc  EditDistForVecString.h  HypStateIndex.h  NbSearchHighLevelHyp.h  NbSearchHyp.h  NbSearchStack.cc  NbSearchStack.h  NbestCorrections.h  NonPbEcModelForNbUcat.cc  NonPbEcModelForNbUcat.h  PfsmEcm.cc  PfsmEcm.h  PfsmEcmForWg.cc  PfsmEcmForWg.h  PfsmEcmForWgEsi.h  PrefAlignInfo.h  RejectedWordsSet.h  WgHandler.cc  WgHandler.h  WgProcessorForAnlp.h  WordAndCharLevelOps.h  WordGraph.cc  WordGraph.h  WordGraphArc.h  WordGraphArcId.h  WordGraphStateData.h  _editDist.h  _editDistBasedEcm.cc  _editDistBasedEcm.h
src/hat_trie/: htrie_hash.h
src/incr_models/: BaseIncrCondProbModel.h  BaseIncrCondProbTable.h  BaseIncrEncCondProbModel.h  BaseIncrEncoder.h  BaseWordPenaltyModel.h  CMakeLists.txt  CacheIncrJelMerNgramLM.cc  CacheLmIncrCpTable.cc  IncrCondProbTable.h  IncrEncoder.h  IncrInterpNgramLM.cc  IncrInterpNgramLM.h  IncrJelMerNgramLM.cc  IncrJelMerNgramLM.h  IncrNgramLM.cc  IncrNgramLM.h  StlNgtComponent.cc  WordPenaltyModel.cc  WordPenaltyModel.h  WordPredictor.cc  WordPredictor.h  _incrEncCondProbModel.h  _incrInterpNgramLM.h  _incrJelMerNgramLM.h  _incrNgramLM.h  im_pair.h  lm_ienc.cc  lm_ienc.h  vecx_x_incr_cptable.h  vecx_x_incr_ecpm.h  vecx_x_incr_enc.h
src/msvc/: Thot.net45.props  Thot.nuspec  Thot.props  thot.sln
src/msvc/dlfcn/: dlfcn.vcxproj  dlfcn.vcxproj.filters
src/msvc/downhill_simplex/: downhill_simplex.vcxproj  downhill_simplex.vcxproj.filters
src/msvc/error_correction/: error_correction.vcxproj  error_correction.vcxproj.filters
src/msvc/include/: .gitattributes  thot_config.h
src/msvc/thot/: thot.vcxproj  (+1 more)
src/nlp_common/: AwkInputStream.cc  AwkInputStream.h  BaseIncrNgramLM.h  BaseNgramLM.h  BidTrie.h  Bitset.h  CMakeLists.txt  Count.h  ErrorDefs.h  Exceptions.h  LM_Defs.h  LogCount.h  MathDefs.h  MathFuncs.cc  MathFuncs.h  Matrix.h  NbestTableNode.h  NbestTransTable.h  OrderedVector.h  PositionIndex.h  Prob.cc  Prob.h  Score.h  SingleWordVocab.cc  SingleWordVocab.h  SmtDefs.h  StatModelDefs.h  StrProcUtils.cc  StrProcUtils.h  TranslationData.h  Trie.h  TrieVecs.h  WordAligMatrix.cc  WordAligMatrix.h  WordAlignmentMatrix.cc  WordAlignmentMatrix.h  WordClassIndex.h  WordClasses.cc  WordClasses.h  WordIndex.h  (+17 more)
src/phrase_models/: AligInfo.h  AlignmentContainer.cc  AlignmentContainer.h  AlignmentExtractor.cc  AlignmentExtractor.h  BaseCountPhraseModel.h  BaseIncrPhraseModel.cc  BaseIncrPhraseModel.h  BasePhraseModel.cc  BasePhraseModel.h  BasePhrasePairFilter.h  BasePhraseTable.h  BpSet.cc  BpSet.h  BpSetInfo.h  CMakeLists.txt  Cache_ct_.cc  Cache_lct_.cc  CategPhrasePairFilter.cc  CategPhrasePairFilter.h  CellAlignment.h  CellID.h  HatTriePhraseTable.cc  HatTriePhraseTable.h  IncrMuxPhraseModel.cc  IncrMuxPhraseModel.h  IncrPhraseModel.cc  IncrPhraseModel.h  LevelDbPhraseModel.cc  LevelDbPhraseModel.h  PhraseDefs.h  PhraseExtractParameters.h  PhraseExtractUtils.cc  PhraseExtractUtils.h  PhraseExtractionCell.h  PhraseExtractionTable.cc  PhraseExtractionTable.h  PhraseId.h  PhrasePair.h  PhrasePairInfo.h  (+30 more)
src/python_module/: CMakeLists.txt  module.cc
src/shared_library/: CMakeLists.txt  thot.cc  thot.h
src/stack_dec/: BaseAssistedTrans.h  BaseHypState.cc  BaseHypState.h  BaseHypothesis.h  BaseHypothesisRec.h  BaseLogLinWeightUpdater.h  BaseMiraScorer.h  BasePbTransModel.h  BasePbTransModelFeature.h  BasePbTransModelStats.h  BasePhraseHypothesis.h  BasePhraseHypothesisRec.h  BaseScorer.h  BaseSmtModel.h  BaseSmtMultiStack.h  BaseSmtStack.h  BaseStackDecoder.h  BaseTranslationMetadata.h  CMakeLists.txt  DictFeat.cc  DictFeat.h  DirectPhraseModelFeat.cc  DirectPhraseModelFeat.h  DynClassFactoryHandler.h  FeaturesInfo.h  HypDebugData.h  HypSortCriterion.h  HypStateDict.h  HypStateDictData.h  InversePhraseModelFeat.cc  InversePhraseModelFeat.h  KbMiraLlWu.cc  KbMiraLlWu.h  LM_State.h  LangModelFeat.cc  LangModelFeat.h  LangModelInfo.h  LangModelPars.h  LangModelsInfo.h  Makefile.am  (+101 more)
src/sw_models/: Aligner.h  AlignmentInfo.h  AlignmentModel.h  AlignmentModelBase.cc  AlignmentModelBase.h  AlignmentTable.cc  AlignmentTable.h  BaseSentLengthModel.h  BaseSentenceHandler.h  BaseStepwiseAligModel.h  BaseSwAligModel.cc  BaseSwAligModel.h  BestLgProbForTrgWord.h  CMakeLists.txt  CachedHmmAligLgProb.cc  CachedHmmAligLgProb.h  DiagonalAlignment.h  DistortionTable.cc  DistortionTable.h  DoubleMatrix.cc  DoubleMatrix.h  FastAlignModel.cc  FastAlignModel.h  FertilityTable.cc  FertilityTable.h  HeadDistortionTable.cc  HeadDistortionTable.h  HmmAligInfo.h  HmmAligModel.cc  HmmAligModel.h  HmmAlignmentModel.cc  HmmAlignmentModel.h  HmmAlignmentTable.cc  HmmAlignmentTable.h  Ibm1AligModel.cc  Ibm1AligModel.h  Ibm1AlignmentModel.cc  Ibm1AlignmentModel.h  Ibm2AligModel.cc  Ibm2AligModel.h  (+106 more)
tests/: CMakeLists.txt  HatTriePhraseTableTest.cc  IncrLexTableTest.cc  KbMiraLlWuTest.cc  MiraChrFTest.cc  StlPhraseTableTest.cc  TranslationMetadataTest.cc  _incrLexTableTest.h  _phraseTableTest.h  test_module.py
tests/nlp_common/: WordAlignmentMatrixTest.cc
tests/phrase_models/: HatTriePhraseTableTest.cc  StlPhraseTableTest.cc  _phraseTableTest.h
tests/stack_dec/: KbMiraLlWuTest.cc  MiraChrFTest.cc  PhrLocalSwLiTmTest.cc  TranslationMetadataTest.cc
tests/sw_models/: FastAlignModelTest.cc  Ibm4AligModelTest.cc  Ibm4AlignmentModelTest.cc  IncrHmmAligModelTest.cc  IncrHmmAlignmentModelTest.cc  IncrLexTableTest.cc  LexTableTest.h  MemoryLexTableTest.cc  TestUtils.cc  TestUtils.h  _incrLexTableTest.h
(+20 files in other folders)
